--- a/versions/README
+++ b/versions/README
@@ -1,3 +1,7 @@
 These are the versions of the API
 ---------------------------------
 Will be updated within 30m of updates.
+
+
+Completed a working version of the api
+Now working on making requests faster, if possible.
