--- a/versions/README
+++ b/versions/README
@@ -5,3 +5,4 @@ Will be updated within 30m of updates.
 
 9/26
 Added "pat" endpoint. Plan on adding a *animated* hug endpoint, kiss, etc.
+-OK SERIOUSLY I FORGOT A SINGLE `"`
