--- a/versions/README
+++ b/versions/README
@@ -2,7 +2,12 @@ These are the versions of the API
 ---------------------------------
 Will be updated within 30m of updates.
 
-
+---------------------------------
 9/26
 Added "pat" endpoint. Plan on adding a *animated* hug endpoint, kiss, etc.
 -OK SERIOUSLY I FORGOT A SINGLE `"`
+
+
+---------------------------------
+9/30
+Redirected to (type)*/static
